@@ -53,6 +53,17 @@ AC_ARG_WITH(imagepath,
 AC_DEFINE_UNQUOTED(FVWM_IMAGEPATH, "$val")
 AC_MSG_RESULT($val)
 
+dnl Enable GNOME-WM Hints
+AC_ARG_ENABLE(gnome, [  --enable-gnome      turn on GNOME Window Manager Hints [default=no]],,enable_gnome=no)
+
+AC_MSG_CHECKING(whether to enable GNOME window manager hints)
+if test "x$enable_gnome" = "xyes"; then
+  AC_DEFINE(GNOME, 1)
+  AC_SUBST(GNOME)
+  AC_MSG_RESULT(yes)
+else
+  AC_MSG_RESULT(no)
+fi
 
 dnl Minimal checks for programs: enough to enable checking for
 dnl optional libraries.
