@@ -610,7 +610,9 @@ to the right side. All other TABs are replaced by spaces.
 
 If the menu-label contains an ampersand ('&'), the next character
 is taken as a hotkey for the menu item. Hotkeys are underlined in
-the label. To get a literal '&', insert '&&'.
+the label. To get a literal '&', insert '&&'.  Pressing the hotkey
+move through the list of menu items with this hotkey or selects
+an item that is the only one with this hotkey.
 
 If the menu-label contains a sub-string which is set off by stars,
 then the text between the stars is expected to be the name of an
@@ -656,7 +658,7 @@ If the menu-name contains also a sub-string set of by '^'s, then the
 text between '^'s is expected to be the name a of X11 color and the
 column containing the side picture will be colorized with that
 color. You can set this color for a menu style using the SideColor
-option of the \fIMenuStyle\fP command.  To get a literal '^', 
+option of the \fIMenuStyle\fP command.  To get a literal '^',
 insert '^^'.  Example:
 .EX
 AddToMenu StartMenu@linux-menu.xpm@^blue^
